--- a/public/locales/id/common.json
+++ b/public/locales/id/common.json
@@ -10,7 +10,7 @@
   "frontendDevelopment": "Pengembangan Frontend",
   "backendDevelopment": "Pengembangan Backend",
   "developerTitles": {
-    "hellos": "Hello 🖐️😉✌️",
+    "hellos": "Hello 👋 😊 👍",
     "frontEnd": "Frontend Developer",
     "web": "Web Developer",
     "react": "React.js Developer",
