--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -10,7 +10,7 @@
   "frontendDevelopment": "Frontend Development",
   "backendDevelopment": "Backend Development",
   "developerTitles": {
-    "hellos": "Hello 🖐️😉✌️",
+    "hellos": "Hello 👋 😊 👍",
     "frontEnd": "Frontend Developer",
     "web": "Web Developer",
     "react": "React.js Developer",
